force-app/main/default/objects/Provider_Consumer_Affiliation__c/Provider_Consumer_Affiliation__c.object-meta.xml
<CustomObject>
    <description>This affiliation is used to identify how providers and consumers are mapped to each other</description>
    <label>Provider+Consumer Affiliation</label>
    <nameField>
        <displayFormat>AF-{0000}</displayFormat>
        <label>Affiliation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Provider+Consumer Affiliations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>