force-app/main/default/objects/Provider_Consumer_Affiliation__c/fields/Affiliation_Status__c.field-meta.xml
<CustomField>
    <fullName>Affiliation_Status__c</fullName>
    <label>Affiliation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Former</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>