force-app/main/default/objects/Provider_Consumer_Affiliation__c/fields/CCA_Consumer_ID__c.field-meta.xml
<CustomField>
    <fullName>CCA_Consumer_ID__c</fullName>
    <formula>Home_Care_Consumer__r.CCA_Consumer_ID__c</formula>
    <label>CCA Consumer ID</label>
    <type>Text</type>
</CustomField>