force-app/main/default/objects/Provider_Consumer_Affiliation__c/fields/CCA_Provider_ID__c.field-meta.xml
<CustomField>
    <fullName>CCA_Provider_ID__c</fullName>
    <formula>Provider__r.CCA_Provider_ID__c</formula>
    <label>CCA Provider ID</label>
    <type>Text</type>
</CustomField>