force-app/main/default/objects/Provider_Consumer_Affiliation__c/fields/Has_Power_of_Attorney_POA__c.field-meta.xml
<CustomField>
    <fullName>Has_Power_of_Attorney_POA__c</fullName>
    <label>Has Power of Attorney (POA)?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>