force-app/main/default/objects/Provider_Consumer_Affiliation__c/fields/If_No_Enter_New_POA_Name__c.field-meta.xml
<CustomField>
    <fullName>If_No_Enter_New_POA_Name__c</fullName>
    <label>If No, Enter New POA Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>