force-app/main/default/objects/Provider_Consumer_Affiliation__c/fields/Is_Consumer_a_relative_of_Provider__c.field-meta.xml
<CustomField>
    <fullName>Is_Consumer_a_relative_of_Provider__c</fullName>
    <label>Is Consumer a relative of Provider?</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>