force-app/main/default/objects/Provider_Consumer_Affiliation__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <label>Provider</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Affiliated Consumers</relationshipLabel>
    <relationshipName>Provider_Consumer_Affiliations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>