force-app/main/default/objects/Provider_Consumer_Affiliation__c/fields/Provider_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Provider_s_Name__c</fullName>
    <formula>Provider__r.FirstName + &quot; &quot; + Provider__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provider&apos;s Name</label>
    <type>Text</type>
</CustomField>