force-app/main/default/objects/Provider_Consumer_Affiliation__c/fields/Work_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Work_Phone_Number__c</fullName>
    <label>Work Phone Number</label>
    <type>Phone</type>
</CustomField>