force-app/main/default/objects/Provider_Consumer_Affiliation__c/validationRules/End_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISPICKVAL( Affiliation_Status__c, &apos;Former&apos; ), ISBLANK( End_Date__c ), NULL)</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>Please enter the End Date</errorMessage>
</ValidationRule>