force-app/main/default/objects/Provider_Consumer_Affiliation__c/validationRules/POA_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>POA_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISPICKVAL( Has_Power_of_Attorney_POA__c , &apos;No&apos;), ISBLANK(If_No_Enter_New_POA_Name__c), NULL)</errorConditionFormula>
    <errorDisplayField>If_No_Enter_New_POA_Name__c</errorDisplayField>
    <errorMessage>Please enter the other POA name</errorMessage>
</ValidationRule>