force-app/main/default/objects/Provider_Consumer_Affiliation__c/validationRules/Start_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISPICKVAL( Affiliation_Status__c, &apos;Current&apos; ), ISBLANK( Start_Date__c ), NULL)</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Please enter the Start Date</errorMessage>
</ValidationRule>