force-app/main/default/objects/Provider_Consumer_Affiliation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CCA_Consumer_ID__c</columns>
    <columns>CCA_Provider_ID__c</columns>
    <columns>Home_Care_Consumer__c</columns>
    <columns>Provider__c</columns>
    <columns>Relationship__c</columns>
    <columns>Is_Consumer_a_relative_of_Provider__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>